--- a/app/src/main/res/layout/activity_addtricount.xml
+++ b/app/src/main/res/layout/activity_addtricount.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/title_add_tricount"
         android:textSize="25sp"
-        android:background="#755EFD"
+        android:background="#2276C3"
         android:textColor="@color/white"
         android:gravity="left"
         android:padding="15sp"
@@ -71,7 +71,6 @@
             android:ems="10"
             android:hint="@string/text_edit_description"
             android:textSize="20sp"
-            android:inputType="number"
             />
     </LinearLayout>
     <LinearLayout
@@ -103,5 +102,16 @@
             android:inputType="date"
             />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonValider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_add_Tricount"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#2276C3"
+        />
 
 </LinearLayout>
