--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="40"
-        tools:srcCompat="@drawable/LogoTricount"
-
+        android:src="@drawable/logotricount"
         />
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerTricount"
         android:layout_width="match_parent"
@@ -27,12 +24,12 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingadd"
-        android:layout_width="130dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        app:srcCompat="@drawable/circleplus"
+        android:src="@drawable/circleplus"
+        app:backgroundTint="@color/white"
+        android:layout_gravity="right"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="30dp"
         />
 </LinearLayout>
