--- a/app/src/main/res/layout/activity_consultation.xml
+++ b/app/src/main/res/layout/activity_consultation.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,11 +13,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/teal_700"
-        android:gravity="center"
+        android:gravity="left"
         android:padding="15dp"
-        android:text="Tricount"
+        android:text="@string/app_name"
         android:textColor="#000000"
         android:textSize="36sp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <TextView
+            android:layout_width="206dp"
+            android:layout_height="40dp"
+            android:background="@color/teal_200"
+            android:gravity="center"
+            android:text="@string/depenses"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:elevation="10dp"
+            tools:visibility="visible" />
+
+        <TextView
+            android:layout_width="206dp"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:background="#CACACA"
+            android:text="@string/equilibre"
+            android:textSize="15sp"
+            android:textColor="#000000"
+            tools:visibility="visible" />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
