--- a/app/src/main/res/layout/activity_addtricount.xml
+++ b/app/src/main/res/layout/activity_addtricount.xml
@@ -110,7 +110,7 @@
         android:id="@+id/buttonValider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_add_Tricount"
+        android:text="@string/title_add_tricount"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginTop="20dp"
