--- a/app/src/main/res/layout/activity_consultation.xml
+++ b/app/src/main/res/layout/activity_consultation.xml
@@ -26,7 +26,7 @@
 
 
         <TextView
-            android:layout_width="206dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/teal_200"
             android:gravity="center"
@@ -38,7 +38,7 @@
             tools:visibility="visible" />
 
         <TextView
-            android:layout_width="206dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:gravity="center"
             android:background="#CACACA"
