--- a/app/src/main/res/layout/activity_tricount_detail.xml
+++ b/app/src/main/res/layout/activity_tricount_detail.xml
@@ -1,27 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/titre"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:textColor="@color/black"/>
+        android:background="#2276C3"
+        android:textColor="@color/white"
+        android:gravity="left"
+        android:padding="15sp"
+        />
 
     <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
+        android:id="@+id/textTotal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/Total"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
         android:textSize="20sp"
-        android:textColor="@color/black"/>
+        />
 
     <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
+        android:id="@+id/total"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:textSize="20sp"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerDepense"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="30"
+        android:layout_marginBottom="100dp"
+        />
+
+    <Button
+        android:id="@+id/buttonAddDepense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_add_depense"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#2276C3"
+        android:layout_marginBottom="3dp"
+        />
+
+    <Button
+        android:id="@+id/buttonMembre"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_Membre"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#2276C3"
+        android:layout_marginBottom="40dp"
+        />
+
 </LinearLayout>
