ajout: - membres - depense

--- a/app/src/main/res/layout/activity_membre.xml
+++ b/app/src/main/res/layout/activity_membre.xml
@@ -40,4 +40,14 @@
         android:backgroundTint="#2276C3"
         android:layout_marginBottom="30dp"
         />
+    <Button
+        android:id="@+id/buttonRetour"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_retour"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:backgroundTint="#2276C3"
+        android:layout_marginBottom="30dp"
+        />
 </LinearLayout>
